kubernetes/catalog/navidrome/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/VandaLpr/unRAID-CA-templates/master/templates/navidrome.xml
# Category: MediaServer-Music
# Stars: 342 | Downloads: 41583165
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: navidrome
          image: deluan/navidrome
          ports:
            - containerPort: 4533
              protocol: TCP
              name: webui
          startupProbe:
            tcpSocket:
              port: 4533
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 60
          readinessProbe:
            tcpSocket:
              port: 4533
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 4533
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: tmp-data
              mountPath: "/data"
            - name: tmp-music
              mountPath: "/music"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: tmp-data
        emptyDir:
      - name: tmp-music
        emptyDir:
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app.kubernetes.io/name: navidrome
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: navidrome
  ports:
    - port: 4533
      targetPort: 4533
      protocol: TCP
      name: webui
  type: ClusterIP
